// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UnwrappedRequestNewPasswordScreen renders correctly when requested 1`] = `
<BackgroundContainer>
  <KeyboardAwareScrollViewMock
    contentContainerStyle={
      Object {
        "padding": 20,
      }
    }
    enableAutomaticScroll={true}
    enableOnAndroid={false}
    enableResetScrollToCoords={true}
    extraHeight={75}
    extraScrollHeight={0}
    keyboardOpeningTime={250}
    viewIsInsideTabBar={false}
  >
    <BackButton
      onPress={[Function]}
      text="Voltar para o login"
    />
    <View
      style={
        Object {
          "alignItems": "flex-end",
          "flex": 6,
          "padding": 20,
        }
      }
    >
      <Title
        large={true}
        style={
          Object {
            "textAlign": "left",
            "width": "100%",
          }
        }
        text="Crie uma nova senha"
      />
      <MessageBox
        display="passive"
        message="Por favor, cheque o seu e-mail para resetar a sua senha."
      />
    </View>
  </KeyboardAwareScrollViewMock>
</BackgroundContainer>
`;

exports[`UnwrappedRequestNewPasswordScreen renders correctly when requesting 1`] = `
<BackgroundContainer>
  <KeyboardAwareScrollViewMock
    contentContainerStyle={
      Object {
        "padding": 20,
      }
    }
    enableAutomaticScroll={true}
    enableOnAndroid={false}
    enableResetScrollToCoords={true}
    extraHeight={75}
    extraScrollHeight={0}
    keyboardOpeningTime={250}
    viewIsInsideTabBar={false}
  >
    <BackButton
      onPress={[Function]}
      text="Voltar para o login"
    />
    <View
      style={
        Object {
          "alignItems": "flex-end",
          "flex": 6,
          "padding": 20,
        }
      }
    >
      <Title
        large={true}
        style={
          Object {
            "textAlign": "left",
            "width": "100%",
          }
        }
        text="Crie uma nova senha"
      />
      <Title
        bold={false}
        style={
          Object {
            "paddingBottom": 20,
            "textAlign": "left",
            "width": "100%",
          }
        }
        text="Insira o seu endereço de e-mail para receber uma nova senha."
      />
      <FormRequestPasswordReset
        setRequestedState={[Function]}
      />
    </View>
  </KeyboardAwareScrollViewMock>
</BackgroundContainer>
`;
